fixing issue with resolving correct type when generating json string